--- a/.github/workflows/workflow-dependency-test.yml
+++ b/.github/workflows/workflow-dependency-test.yml
@@ -20,6 +20,7 @@ on:
         default: all
         options:
           - all
+          - common
           - func1
           - func2
 
@@ -52,7 +53,7 @@ jobs:
   module-common:
     name: Module common
     needs: [config]
-    if: always()
+    if: ${{ !cancelled() && !failure() }}
       && contains(fromJSON('["all", "common"]'), needs.config.outputs.module)
     runs-on: ubuntu-latest
     steps:
@@ -65,7 +66,7 @@ jobs:
   module-func1:
     name: Module func1
     needs: [config, module-common]
-    if: always()
+    if: ${{ !cancelled() && !failure() }}
       && contains(fromJSON('["all", "func1"]'), needs.config.outputs.module)
       && contains(fromJSON('["success", "skipped"]'), needs.module-common.result)
     runs-on: ubuntu-latest
@@ -79,7 +80,7 @@ jobs:
   module-func2:
     name: Module func2
     needs: [config, module-common]
-    if: always()
+    if: ${{ !cancelled() && !failure() }}
       && contains(fromJSON('["all", "func2"]'), needs.config.outputs.module)
       && contains(fromJSON('["success", "skipped"]'), needs.module-common.result)
     runs-on: ubuntu-latest
